# SlicerPySERA

./: CMakeLists.txt  LICENSE  README.md  SlicerPySera.s4ext  SuperBuild.cmake
PySeraCLI/: CMakeLists.txt  PySeraCLIModule.py
PySeraQt/: CMakeLists.txt  PySeraQt.py  PySeraQt.ui
PySera_Ext/: CMakeLists.txt  PySera.py
pysera_lib/: parameters.yaml  version.py
